Fixes overflow clipping issue

--- a/styles/common_style.css
+++ b/styles/common_style.css
@@ -109,7 +109,7 @@ code {
 	overflow-wrap: break-word;
 }
 
-/* Very general stuff */
+/* Very general stuff related to width and overflow */
 html {
 	padding-bottom: 100px;
 	overflow-x: hidden;
@@ -117,6 +117,22 @@ html {
 body {
 	margin-top: 0;
 	overflow-x: clip;
+	width: 100%;
+	margin-inline: auto;
+}
+nav {
+	width: min(65ch, 100%);
+	margin-inline: auto;
+}
+.sticky {
+	width: 100%;
+	margin: auto;
+}
+main {
+	padding-left: calc(calc(min(65ch, 100% - 4rem) - 400px)/2);
+	padding-right: calc(calc(min(65ch, 100% - 4rem) - 400px)/2);
+	width: min(65ch, 100%);
+	margin: auto;
 }
 *,
 *::before,
@@ -143,16 +159,14 @@ h4 {
  	font-style:italic;
 }
 
-
 img, svg {
 	vertical-align: middle;
 	align-self: center;
 }
 
 nav {
-	width: 100%;
 	padding: 0;
-	z-index: 1000;
+	z-index: 3;
 }
 
 nav ul {
