--- a/styles/frontpage_style.css
+++ b/styles/frontpage_style.css
@@ -2,17 +2,6 @@ html {
 	scroll-behavior: smooth;
 }
 
-body {
-	width: min(65ch, 100%);
-	margin-inline: auto;
-}
-
-main {
-	padding-left: calc(calc(min(65ch, 100% - 4rem) - 400px)/2);
-	padding-right: calc(calc(min(65ch, 100% - 4rem) - 400px)/2);
-	margin: auto;
-}
-
 h2, h3 {
 	font-weight: bold;
 	margin-bottom: -5px;
